# alfred

./: .dockerignore  .gitignore  197110ee016c1d1dca6340645045b50e-The%20Pensions%20Regulator.csv  CLAUDE.md  Cargo.toml  Makefile  README.md  coding-instructions.md  sample.csv
.codebase-analyzer-results/: accessibility-assessor-data.json  api-design-reviewer-data.json  code-smell-detector-data.json  codebase-context.json  cognitive-load-analyzer-data.json  concurrency-analyzer-data.json  consistency-checker-data.json  data-layer-reviewer-data.json  ddd-architect-data.json  dead-code-detector-data.json  dependency-auditor-data.json  devops-evaluator-data.json  documentation-reviewer-data.json  error-handling-reviewer-data.json  legacy-code-expert-data.json  observability-assessor-data.json  refactoring-expert-data.json  security-assessor-data.json  system-auditor-data.json  system-explorer-data.json
.github/workflows/: ci.yml
crates/alfred-bin/: Cargo.toml
crates/alfred-bin/src/: main.rs
crates/alfred-core/: Cargo.toml
crates/alfred-lisp/: Cargo.toml
crates/alfred-lisp/src/: bridge.rs  lib.rs  runtime.rs
crates/alfred-plugin/: Cargo.toml
crates/alfred-syntax/: Cargo.toml
crates/alfred-syntax/queries/javascript/: highlights.scm
crates/alfred-syntax/queries/python/: highlights.scm
crates/alfred-syntax/queries/rust/: highlights.scm
crates/alfred-syntax/src/: highlighter.rs  language.rs  lib.rs
crates/alfred-tui/: Cargo.toml
crates/alfred-tui/src/: app.rs  colon_commands.rs  input.rs  lib.rs  renderer.rs
docs/adrs/: adr-001-adopt-existing-lisp.md  adr-002-plugin-first-architecture.md  adr-003-single-process-synchronous.md  adr-004-lisp-interpreter-selection.md  adr-005-development-paradigm.md  adr-006-crate-structure.md  adr-007-tree-sitter-syntax-highlighting.md  adr-008-folder-browser-architecture.md  adr-009-file-search-architecture.md  adr-011-regex-engine-choice.md  (+2 more)
memory/: MEMORY.md  feedback_ctrl_q.md  feedback_ui_design.md
scripts/: pre-commit  setup-hooks.sh
tests/: workspace_structure_test.sh
(+141 files in other folders)
