[package]
name = "alfred-bin"
version = "0.1.0"
edition = "2021"
description = "Binary entry point for the Alfred text editor"

[[bin]]
name = "alfred"
path = "src/main.rs"

[dependencies]
alfred-core = { path = "../alfred-core" }
alfred-lisp = { path = "../alfred-lisp" }
alfred-plugin = { path = "../alfred-plugin" }
alfred-syntax = { path = "../alfred-syntax" }
alfred-tui = { path = "../alfred-tui" }
crossterm = "0.28"

[dev-dependencies]
tempfile = "3"
