[package]
name = "alfred-lisp"
version = "0.1.0"
edition = "2021"
description = "Lisp interpreter integration for Alfred (stub)"

[features]
perf-tests = []

[dependencies]
alfred-core = { version = "0.1.0", path = "../alfred-core" }
regex = "1"
rust_lisp = "0.18.0"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
